--- a/E/Epic/Vail_Resort_Template/ads/320x50/vail/320x50_vail.htm
+++ b/E/Epic/Vail_Resort_Template/ads/320x50/vail/320x50_vail.htm
@@ -65,30 +65,30 @@
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
       <div id="frameText1" class="text-left TradeGothicNextLTProCondensed"
         data-text="frameText1"
-        style="top: 5px;
+        style="top: 3px;
           left: 170px;
           width: 82px;
-          height: 40px;
+          height: 44px;
           font-size: 11px;
           letter-spacing: 1.1px;
           line-height: 1.1;">
       </div>
       <div id="frameText2" class="text-left TradeGothicNextLTProCondensed"
         data-text="frameText2"
-        style="top: 5px;
+        style="top: 3px;
           left: 170px;
           width: 82px;
-          height: 40px;
+          height: 44px;
           font-size: 11px;
           letter-spacing: 1.1px;
           line-height: 1.1;">
       </div>
       <div id="frameText3" class="text-left TradeGothicNextLTProCondensed"
         data-text="frameText3"
-        style="top: 5px;
+        style="top: 3px;
           left: 170px;
           width: 82px;
-          height: 40px;
+          height: 44px;
           font-size: 11px;
           letter-spacing: 1.1px;
           line-height: 1.1;">
@@ -155,14 +155,11 @@
               layout = content.layout.toLowerCase();
               if(layout == 'multipleimages') {
                 content.styleProperties = "{'#frameText': {x:-4, y:-3}, '#frameText span': {css:{textAlign:'left'}}, '#cta': {x:-90, y:13}, '#saleImage': {css:{display:'block'}}}";
-                ad.root.querySelector('#frameText1').style.width = '104px';
-                ad.root.querySelector('#frameText1').style.height = '26px';
-
-                ad.root.querySelector('#frameText2').style.width = '104px';
-                ad.root.querySelector('#frameText2').style.height = '26px';
-
-                ad.root.querySelector('#frameText3').style.width = '104px';
-                ad.root.querySelector('#frameText3').style.height = '26px';
+                var frameText = document.querySelectorAll("#frameText1,#frameText2,#frameText3");
+                for (var i = 0; i < frameText.length; i++){
+                 frameText[i].style.width = '95px';
+                 frameText[i].style.height = '22px';
+                }
                 ad.root.querySelector('#cta').style.width = '49px';
                 ad.root.querySelector('#cta').style.height = '16px';
                 ad.root.querySelector('#cta').style.fontSize = '5.7px';
