--- a/E/Epic/Vail_Resort_Template/ads/300x250/okemo/300x250_okemo.htm
+++ b/E/Epic/Vail_Resort_Template/ads/300x250/okemo/300x250_okemo.htm
@@ -53,6 +53,7 @@
       <div id="topWhitePatch" class="frame" style="top:-213px;background-color:rgba(255, 255, 255, 0.85);"></div>
       <div id="bottomWhitePatch" class="frame" style="top:165px;background-color:rgba(255, 255, 255, 0.9);"></div>
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
+      <div id="saleImage" class="asset frame" data-image="saleImage" style="display:none;"></div>
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
       <div id="frameText1" class="text-left InterLight"
         data-text="frameText1"
@@ -135,6 +136,7 @@
           ],
           staticData: {
             // ref: 'ref.png'
+            saleImage: 'images/300x250_Vail_Resort_SaleImage.png',
             styleProperties: "na", //{'#cta': {y:10},'#logoImage': {y:10}}
             ctaBtnColor: '#006691^#002d40',
           },
@@ -142,6 +144,14 @@
             data.map(function(content){
               content.ctaBtn = content.ctaBtnColor.split('^')[0];
               content.ctaBtnHover = content.ctaBtnColor.split('^')[1];
+              layout = content.layout.toLowerCase();
+              if(layout == 'multipleimages') {
+                content.styleProperties = "{'#cta': {x:-191, y:21}, '#saleImage': {css:{display:'block'}}}";
+                var frameText = document.querySelectorAll("#frameText1,#frameText2,#frameText3");
+                for (var i = 0; i < frameText.length; i++){
+                 frameText[i].style.height = '38px';
+                }
+              }
             });
             return data;
           }
@@ -164,7 +174,7 @@
           if(layout != 'multipleimages') { gsap.set('.multiframe', { autoAlpha :0}) }
             gsap.timeline({defaults:{ease: Power2.easeInOut, duration: 0.7}})
             .from('#bottomWhitePatch', { y:adHeight, delay:0.5 })
-            .from('#frameText1, #cta', { autoAlpha:0 })
+            .from('#frameText1, #cta, #saleImage', { autoAlpha:0 })
             .to('#frameText1', { autoAlpha:0, delay:3 })
             .from('#frameText2, #backgroundImage2', { autoAlpha:0 })
             .to('#frameText2', { autoAlpha:0, delay:3 })
