--- a/E/Epic/Vail_Resort_Template/ads/728x90/okemo/728x90_okemo.htm
+++ b/E/Epic/Vail_Resort_Template/ads/728x90/okemo/728x90_okemo.htm
@@ -53,6 +53,7 @@
       <div id="topWhitePatch" class="frame" style="left:-615px;background-color:rgba(255, 255, 255, 0.85);"></div>
       <div id="bottomWhitePatch" class="frame" style="left:424px;background-color:rgba(255, 255, 255, 0.9);"></div>
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
+      <div id="saleImage" class="asset frame" data-image="saleImage" style="display:none;"></div>
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
       <div id="frameText1" class="text-left InterLight"
         data-text="frameText1"
@@ -135,6 +136,7 @@
           ],
           staticData: {
             // ref: 'ref.png'
+            saleImage: 'images/728x90_Vail_Resort_SaleImage.png',
             styleProperties: "na", //{'#cta': {y:10},'#logoImage': {y:10}}
             ctaBtnColor: '#006691^#002d40',
           },
@@ -143,12 +145,16 @@
               content.ctaBtn = content.ctaBtnColor.split('^')[0];
               content.ctaBtnHover = content.ctaBtnColor.split('^')[1];
               layout = content.layout.toLowerCase();
-              if(layout == 'sale') {
+              if(layout == 'multipleimages') {
                 content.styleProperties = "{'#frameText': {x:2, y:1}, '#frameText span': {css:{textAlign:'left'}}, '#cta': {x:-180, y:25}, '#saleImage': {css:{display:'block'}}}";
-                ad.root.querySelector('#frameText').style.width = '210px';
-                ad.root.querySelector('#frameText').style.height = '46px';
-                ad.root.querySelector('#frameText').style.fontSize = '18.2px';
-                ad.root.querySelector('#frameText').style.lineHeight = '1.2';
+                var frameText = document.querySelectorAll("#frameText1,#frameText2,#frameText3");
+                for (var i = 0; i < frameText.length; i++){
+                 frameText[i].style.width = '210px';
+                 frameText[i].style.height = '46px';
+                 frameText[i].style.fontSize = '18.2px';
+                 frameText[i].style.lineHeight = '1.2';
+                }
+
                 ad.root.querySelector('#cta').style.width = '84px';
                 ad.root.querySelector('#cta').style.height = '27px';
                 ad.root.querySelector('#cta').style.fontSize = '9.5px';
@@ -175,7 +181,7 @@
           if(layout != 'multipleimages') { gsap.set('.multiframe', { autoAlpha :0}) }
             gsap.timeline({defaults:{ease: Power2.easeInOut, duration: 0.7}})
             .from('#bottomWhitePatch', { x:adWidth/2, delay:0.5 })
-            .from('#frameText1, #cta', { autoAlpha:0 })
+            .from('#frameText1, #cta, #saleImage', { autoAlpha:0 })
             .to('#frameText1', { autoAlpha:0, delay:3 })
             .from('#frameText2, #backgroundImage2', { autoAlpha:0 })
             .to('#frameText2', { autoAlpha:0, delay:3 })
