--- a/E/Epic/Vail_Resort_Template/ads/300x600/vail/300x600_vail.htm
+++ b/E/Epic/Vail_Resort_Template/ads/300x600/vail/300x600_vail.htm
@@ -5,7 +5,7 @@
     <title>Ad</title>
     <script type="text/javascript" src="https://ads.everesttech.net/ads/static/local/AMOLibrary.js"></script>
     <link rel="stylesheet" href="css/style.min.css">
-    <link rel="stylesheet" href="https://use.typekit.net/clc1fgj.css">
+    <link rel="stylesheet" href="https://use.typekit.net/mhd0aqx.css">
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.0.1/dist/gsap.min.js" charset="utf-8"></script>
     <script type="text/javascript" src="js/script.min.js"></script>
     <style media="screen">
@@ -41,12 +41,6 @@
         left:0px;
         width:inherit;
         height:inherit;
-      }
-      .regular {
-        font-family: trade-gothic-next-condensed,sans-serif;
-        font-weight: 400;
-        font-style: normal;
-        font-size: 90%;
       }
       #cta { background-color: !{ctaBtn}; }
       #ad:hover #cta { background-color: !{ctaBtnHover}; }
