--- a/E/Epic/Vail_Resort_Template/ads/320x50/320x50.html
+++ b/E/Epic/Vail_Resort_Template/ads/320x50/320x50.html
@@ -22,8 +22,11 @@
         amo.registerVariation("clickURL", "https://www.vail.com/");
         var adURL = '';
         switch (amo.variation['brandName'].toLowerCase()) {
-          case 'vail' : case 'vail resort' : adURL = 'vail/320x50_vail.htm';break;
-          case 'okemo' : adURL = 'okemo/320x50_okemo.htm';break;
+          case 'beaver creek' : adURL = 'BeaverCreek/320x50_BeaverCreek.htm';break;
+          case 'breckenridge' : adURL = 'Breckenridge/320x50_Breckenridge.htm';break;
+          case 'crested butte' : adURL = 'CrestedButte/320x50_CrestedButte.htm';break;
+          case 'okemo' : adURL = 'Okemo/320x50_Okemo.htm';break;
+          case 'vail' : case 'vail resort' : adURL = 'Vail/320x50_Vail.htm';break;
           default: adURL = 'vail/320x50_vail.htm';break;
         }
         var iframe = document.createElement('iframe');
