--- a/E/Epic/Vail_Resort_Template/ads/970x250/okemo/970x250_okemo.htm
+++ b/E/Epic/Vail_Resort_Template/ads/970x250/okemo/970x250_okemo.htm
@@ -5,6 +5,7 @@
     <title>Ad</title>
     <script type="text/javascript" src="https://ads.everesttech.net/ads/static/local/AMOLibrary.js"></script>
     <link rel="stylesheet" href="css/style.min.css">
+    <link rel="stylesheet" href="https://use.typekit.net/mhd0aqx.css">
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.0.1/dist/gsap.min.js" charset="utf-8"></script>
     <script type="text/javascript" src="js/script.min.js"></script>
     <style media="screen">
@@ -147,6 +148,10 @@
               layout = content.layout.toLowerCase();
               if(layout == 'multipleimages') {
                 content.styleProperties = "{'#saleImage': {css:{display:'block'}}}";
+                var frameText = document.querySelectorAll("#frameText1,#frameText2,#frameText3");
+                for (var i = 0; i < frameText.length; i++){
+                 frameText[i].style.width = '220px';
+                }
               }
             });
             return data;
