--- a/E/Epic/Vail_Resort_Template/ads/970x250/vail/970x250_vail.htm
+++ b/E/Epic/Vail_Resort_Template/ads/970x250/vail/970x250_vail.htm
@@ -5,7 +5,7 @@
     <title>Ad</title>
     <script type="text/javascript" src="https://ads.everesttech.net/ads/static/local/AMOLibrary.js"></script>
     <link rel="stylesheet" href="css/style.min.css">
-    <link rel="stylesheet" href="https://use.typekit.net/clc1fgj.css">
+    <link rel="stylesheet" href="https://use.typekit.net/mhd0aqx.css">
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.0.1/dist/gsap.min.js" charset="utf-8"></script>
     <script type="text/javascript" src="js/script.min.js"></script>
     <style media="screen">
@@ -41,13 +41,6 @@
         left:0px;
         width:inherit;
         height:inherit;
-      }
-      .regular {
-        font-family: trade-gothic-next-condensed,sans-serif;
-        font-weight: 400;
-        font-style: normal;
-        font-size: 89%;
-        line-height: 1.1;
       }
       #cta { background-color: !{ctaBtn}; }
       #ad:hover #cta { background-color: !{ctaBtnHover}; }
@@ -155,6 +148,10 @@
               layout = content.layout.toLowerCase();
               if(layout == 'multipleimages') {
                 content.styleProperties = "{'#saleImage': {css:{display:'block'}}}";
+                var frameText = document.querySelectorAll("#frameText1,#frameText2,#frameText3");
+                for (var i = 0; i < frameText.length; i++){
+                 frameText[i].style.width = '220px';
+                }
               }
             });
             return data;
