--- a/E/Epic/Vail_Resort_Template/ads.html
+++ b/E/Epic/Vail_Resort_Template/ads.html
@@ -52,13 +52,13 @@
         margin: 0px;
         margin: 0px 5px 0px 5px;
         border-bottom: 2px solid;
-        color:#20285d;
+        color:#4097d6;
       }
       #header > div.selected {
         margin: 0px;
         margin: 0px 5px 0px 5px;
         border-bottom: 2px solid;
-        color:#20285d;
+        color:#4097d6;
       }
       #subheader {
         display: inline-block;
@@ -83,13 +83,13 @@
         /* margin: 0px;
         margin: 0px 5px 0px 5px;
         border-bottom: 2px solid; */
-        color:#20285d;
+        color:#4097d6;
       }
       #subheader > div.selected {
         /* margin: 0px;
         margin: 0px 5px 0px 5px;
         border-bottom: 2px solid; */
-        color:#20285d;
+        color:#4097d6;
       }
       #subsubheader {
         font-family: Arial;
@@ -129,7 +129,7 @@
         color:#333;
         font-size: 20px;
         text-align: center;
-        color:#20285d;
+        color:#4097d6;
       }
       .frame-wrapper {
         display: inline-block;
