--- a/E/Epic/Vail_Resort_Template/ads/970x250/970x250.html
+++ b/E/Epic/Vail_Resort_Template/ads/970x250/970x250.html
@@ -22,12 +22,24 @@
         amo.registerVariation("clickURL", "https://www.vail.com/");
         var adURL = '';
         switch (amo.variation['brandName'].toLowerCase()) {
-          case 'beaver creek' : adURL = 'BeaverCreek/970x250_BeaverCreek.htm';break;
+          case 'beaver creek' : case 'beavercreek' : adURL = 'BeaverCreek/970x250_BeaverCreek.htm';break;
           case 'breckenridge' : adURL = 'Breckenridge/970x250_Breckenridge.htm';break;
-          case 'crested butte' : adURL = 'CrestedButte/970x250_CrestedButte.htm';break;
+          case 'crested butte' : case 'crestedbutte' : adURL = 'CrestedButte/970x250_CrestedButte.htm';break;
+          case 'heavenly' : adURL = 'Heavenly/970x250_Heavenly.htm';break;
+          case 'hunter' : adURL = 'Hunter/970x250_Hunter.htm';break;
+          case 'keystone' : adURL = 'Keystone/970x250_Keystone.htm';break;
+          case 'kirkwood' : adURL = 'Kirkwood/970x250_Kirkwood.htm';break;
+          case 'liberty' : adURL = 'Liberty/970x250_Liberty.htm';break;
+          case 'mt snow' : case 'mtsnow' : adURL = 'MtSnow/970x250_MtSnow.htm';break;
+          case 'mt sunapee' : case 'mtsunapee' : adURL = 'MtSunapee/970x250_MtSunapee.htm';break;
+          case 'northstar' : adURL = 'Northstar/970x250_Northstar.htm';break;
           case 'okemo' : adURL = 'Okemo/970x250_Okemo.htm';break;
+          case 'park city' : case 'parkcity' : adURL = 'ParkCity/970x250_ParkCity.htm';break;
+          case 'stevens pass' : case 'stevenspass' : adURL = 'StevensPass/970x250_StevensPass.htm';break;
+          case 'stowe' : adURL = 'Stowe/970x250_Stowe.htm';break;
           case 'vail' : case 'vail resort' : adURL = 'Vail/970x250_Vail.htm';break;
-          default: adURL = 'vail/970x250_vail.htm';break;
+          case 'whistler blackcomb' : case 'whistlerblackcomb' : adURL = 'WhistlerBlackcomb/970x250_WhistlerBlackcomb.htm';break;
+          default: adURL = 'Vail/970x250_Vail.htm';break;
         }
         var iframe = document.createElement('iframe');
         iframe.src = adURL;
