--- a/E/Epic/Vail_Resort_Template/ads/300x600/Heavenly/300x600_Heavenly.htm
+++ b/E/Epic/Vail_Resort_Template/ads/300x600/Heavenly/300x600_Heavenly.htm
@@ -9,21 +9,11 @@
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.0.1/dist/gsap.min.js" charset="utf-8"></script>
     <script type="text/javascript" src="js/script.min.js"></script>
     <style media="screen">
-      @font-face {
-          font-family: InterLight;
-          src: url('fonts/Inter-Light.woff') format("woff");
+      .DINCondensedRegular{
+        font-family: din-condensed,sans-serif;
+        font-weight: 400;
+        font-style: normal;
       }
-      @font-face {
-          font-family: InterSemiBold;
-          src: url('fonts/Inter-SemiBold.woff') format("woff");
-      }
-      /* @font-face {
-          font-family: ScotchDisplayFat;
-          src: url('fonts/Positype - Scotch Display Fat.woff') format("woff");
-      } */
-      .InterLight { font-family: InterLight; }
-      .InterSemiBold { font-family: InterSemiBold; }
-      /* .ScotchDisplayFat { font-family: ScotchDisplayFat; } */
     </style>
     <style media="screen" data-dynamic="style">
       #ad {
@@ -32,7 +22,7 @@
         font-family: arial,sans-serif;
         font-weight: 900;
         font-style: normal;
-        color: #006691;
+        color: #cc2131;
         background-color: #fff;
       }
       .frame {
@@ -56,7 +46,7 @@
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="saleImage" class="asset frame" data-image="saleImage" style="display:none;"></div>
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
-      <div id="frameText1" class="text InterLight"
+      <div id="frameText1" class="text DINCondensedRegular"
         data-text="frameText1"
         data-style="text-align:center;"
         style="top: 457px;
@@ -67,7 +57,7 @@
           letter-spacing: 1.9px;
           line-height: 1.15;">
       </div>
-      <div id="frameText2" class="text InterLight"
+      <div id="frameText2" class="text DINCondensedRegular"
         data-text="frameText2"
         data-style="text-align:center;"
         style="top: 457px;
@@ -78,7 +68,7 @@
           letter-spacing: 1.9px;
           line-height: 1.15;">
       </div>
-      <div id="frameText3" class="text InterLight"
+      <div id="frameText3" class="text DINCondensedRegular"
         data-text="frameText3"
         data-style="text-align:center;"
         style="top: 457px;
@@ -89,7 +79,7 @@
           letter-spacing: 1.9px;
           line-height: 1.15;">
       </div>
-      <div id="cta" class="text InterSemiBold"
+      <div id="cta" class="text DINCondensedRegular"
         data-text="ctaText"
         data-style="padding:0 8px 0px;"
         style="top: 542px;
@@ -105,9 +95,7 @@
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
     </div>
     <div id="loadFont" style="width:0;height:0;overflow:hidden;">
-      <div class="InterLight">InterLight</div>
-      <div class="InterSemiBold">InterSemiBold</div>
-      <!-- <div class="ScotchDisplayFat">ScotchDisplayFat</div> -->
+      <div class="DINCondensedRegular">DINCondensedRegular</div>
     </div>
     <script type="text/javascript">
       var layout = 'standard';
@@ -142,7 +130,7 @@
             // ref: 'ref.png'
             saleImage: 'images/300x600_Vail_Resort_SaleImage.png',
             styleProperties: "na", //{'#cta': {y:10},'#logoImage': {y:10}}
-            ctaBtnColor: '#006691^#002d40',
+            ctaBtnColor: '#cc2131^#79131c',
           },
           beforeLoad: function(data){
             data.map(function(content){
