--- a/E/Epic/Vail_Resort_Template/ads/320x50/okemo/320x50_okemo.htm
+++ b/E/Epic/Vail_Resort_Template/ads/320x50/okemo/320x50_okemo.htm
@@ -93,7 +93,7 @@
           left: 256px;
           width: 55px;
           height: 18px;
-          font-size: 6px;
+          font-size: 7px;
           line-height: 10px;
           letter-spacing: 0.5px;
           border-radius: 12px;
@@ -155,7 +155,7 @@
                 }
                 ad.root.querySelector('#cta').style.width = '49px';
                 ad.root.querySelector('#cta').style.height = '16px';
-                ad.root.querySelector('#cta').style.fontSize = '5.7px';
+                // ad.root.querySelector('#cta').style.fontSize = '5.7px';
               }
             });
             return data;
