--- a/E/Epic/Vail_Resort_Template/ads/320x50/CrestedButte/320x50_CrestedButte.htm
+++ b/E/Epic/Vail_Resort_Template/ads/320x50/CrestedButte/320x50_CrestedButte.htm
@@ -83,7 +83,7 @@
           left: 256px;
           width: 55px;
           height: 18px;
-          font-size: 6px;
+          font-size: 8px;
           line-height: 10px;
           letter-spacing: 0.5px;
           border-radius: 12px;
@@ -143,7 +143,7 @@
                 }
                 ad.root.querySelector('#cta').style.width = '49px';
                 ad.root.querySelector('#cta').style.height = '16px';
-                ad.root.querySelector('#cta').style.fontSize = '5.7px';
+                // ad.root.querySelector('#cta').style.fontSize = '5.7px';
               }
             });
             return data;
