--- a/M/Microsoft/Microsoft_Office_BTS_Interactive_Banner/ads/300x250/InteractiveParent/M365_FY21Q1_BTS_USA_300x250_BAN_InteractiveParent_English_NA_NA_ANI_BN_NA_1.htm
+++ b/M/Microsoft/Microsoft_Office_BTS_Interactive_Banner/ads/300x250/InteractiveParent/M365_FY21Q1_BTS_USA_300x250_BAN_InteractiveParent_English_NA_NA_ANI_BN_NA_1.htm
@@ -145,7 +145,7 @@ var startBanner = function(){
 
 				exportRoot.mainMC.hit.addEventListener("click", exitHandler.bind(this));
 				function exitHandler() {
-					amoAd.click(ClickID);
+					amoAd.click(ClickID-1);
 				  // 	if (ClickID==1) window.open(clickTag_1);
 					//
 					// if (ClickID==2) window.open(clickTag_2);
@@ -251,7 +251,7 @@ var startBanner = function(){
 			}
 		}
 		function click(id) {
-			if(parentWindow.urls[id].path.toLowerCase() != 'na') parentWindow.amo.onDynAdClick(parentWindow.urls[id].data, "CLICK", parentWindow.urls[id].path, parentWindow.urls[id].label);
+			if(id >= 0 && parentWindow.urls[id].path.toLowerCase() != 'na') parentWindow.amo.onDynAdClick(parentWindow.urls[id].data, "CLICK", parentWindow.urls[id].path, parentWindow.urls[id].label);
 		}
 		function onInteraction(id) {
 			var parentWindows = window.parent.parent.window;
