--- a/E/Epic/Vail_Resort_Template/ads/300x250/Kirkwood/300x250_Kirkwood.htm
+++ b/E/Epic/Vail_Resort_Template/ads/300x250/Kirkwood/300x250_Kirkwood.htm
@@ -9,14 +9,9 @@
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.0.1/dist/gsap.min.js" charset="utf-8"></script>
     <script type="text/javascript" src="js/script.min.js"></script>
     <style media="screen">
-      .OpenSansCondensedBold {
-        font-family: open-sans-condensed,sans-serif;
+      .TradeGothicNextLTProBoldCondensed {
+        font-family: trade-gothic-next-condensed,sans-serif;
         font-weight: 700;
-        font-style: normal;
-      }
-      .MontserratSemibold{
-        font-family: montserrat, sans-serif;
-        font-weight: 600;
         font-style: normal;
       }
     </style>
@@ -27,7 +22,7 @@
         font-family: arial,sans-serif;
         font-weight: 900;
         font-style: normal;
-        color: #5c6f7c;
+        color: #F15A2B;
         background-color: #fff;
       }
       .frame {
@@ -51,7 +46,7 @@
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="saleImage" class="asset frame" data-image="saleImage" style="display:none;"></div>
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
-      <div id="frameText1" class="text-left MontserratSemibold"
+      <div id="frameText1" class="text-left TradeGothicNextLTProBoldCondensed"
         data-text="frameText1"
         style="top: 171px;
           left: 11px;
@@ -61,7 +56,7 @@
           letter-spacing: 1.7px;
           line-height: 1.15;">
       </div>
-      <div id="frameText2" class="text-left MontserratSemibold"
+      <div id="frameText2" class="text-left TradeGothicNextLTProBoldCondensed"
         data-text="frameText2"
         style="top: 171px;
           left: 11px;
@@ -71,7 +66,7 @@
           letter-spacing: 1.7px;
           line-height: 1.15;">
       </div>
-      <div id="frameText3" class="text-left MontserratSemibold"
+      <div id="frameText3" class="text-left TradeGothicNextLTProBoldCondensed"
         data-text="frameText3"
         style="top: 171px;
           left: 11px;
@@ -81,7 +76,7 @@
           letter-spacing: 1.7px;
           line-height: 1.15;">
       </div>
-      <div id="cta" class="text OpenSansCondensedBold"
+      <div id="cta" class="text TradeGothicNextLTProBoldCondensed"
         data-text="ctaText"
         data-style="padding:0 8px 1px;"
         style="top: 194px;
@@ -91,14 +86,13 @@
           font-size: 11px;
           line-height: 20px;
           letter-spacing: 1px;
-          /* border-radius: 15px; */
+          border-radius: 15px;
           color: #fff;">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
     </div>
     <div id="loadFont" style="width:0;height:0;overflow:hidden;">
-      <div class="MontserratSemibold">MontserratSemibold</div>
-      <div class="OpenSansCondensedBold">OpenSansCondensedBold</div>
+      <div class="TradeGothicNextLTProBoldCondensed">TradeGothicNextLTProBoldCondensed</div>
     </div>
     <script type="text/javascript">
       var layout = 'standard';
@@ -133,7 +127,7 @@
             // ref: 'ref.png'
             saleImage: 'images/300x250_Vail_Resort_SaleImage.png',
             styleProperties: "na", //{'#cta': {y:10},'#logoImage': {y:10}}
-            ctaBtnColor: '#5c6f7c^#3d4952',
+            ctaBtnColor: '#F15A2B^#a72c06',
           },
           beforeLoad: function(data){
             data.map(function(content){
