--- a/E/Epic/Vail_Resort_Template/ads/320x50/Liberty/320x50_Liberty.htm
+++ b/E/Epic/Vail_Resort_Template/ads/320x50/Liberty/320x50_Liberty.htm
@@ -10,20 +10,10 @@
     <script type="text/javascript" src="js/script.min.js"></script>
     <style media="screen">
       @font-face {
-          font-family: InterLight;
-          src: url('fonts/Inter-Light.woff') format("woff");
+          font-family: SentinelBook;
+          src: url('fonts/Sentinel Book.woff') format("woff");
       }
-      @font-face {
-          font-family: InterSemiBold;
-          src: url('fonts/Inter-SemiBold.woff') format("woff");
-      }
-      /* @font-face {
-          font-family: ScotchDisplayFat;
-          src: url('fonts/Positype - Scotch Display Fat.woff') format("woff");
-      } */
-      .InterLight { font-family: InterLight; }
-      .InterSemiBold { font-family: InterSemiBold; }
-      /* .ScotchDisplayFat { font-family: ScotchDisplayFat; } */
+      .SentinelBook { font-family: SentinelBook; }
     </style>
     <style media="screen" data-dynamic="style">
       #ad {
@@ -32,7 +22,7 @@
         font-family: arial,sans-serif;
         font-weight: 900;
         font-style: normal;
-        color: #006691;
+        color: #4e5758;
         background-color: #fff;
       }
       .frame {
@@ -56,7 +46,7 @@
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="saleImage" class="asset frame" data-image="saleImage" style="display:none;"></div>
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
-      <div id="frameText1" class="text-left InterLight"
+      <div id="frameText1" class="text-left SentinelBook"
         data-text="frameText1"
         style="top: 3px;
           left: 170px;
@@ -66,7 +56,7 @@
           letter-spacing: 1.1px;
           line-height: 1.1;">
       </div>
-      <div id="frameText2" class="text-left InterLight"
+      <div id="frameText2" class="text-left SentinelBook"
         data-text="frameText2"
         style="top: 3px;
           left: 170px;
@@ -76,7 +66,7 @@
           letter-spacing: 1.1px;
           line-height: 1.1;">
       </div>
-      <div id="frameText3" class="text-left InterLight"
+      <div id="frameText3" class="text-left SentinelBook"
         data-text="frameText3"
         style="top: 3px;
           left: 170px;
@@ -86,7 +76,7 @@
           letter-spacing: 1.1px;
           line-height: 1.1;">
       </div>
-      <div id="cta" class="text InterSemiBold"
+      <div id="cta" class="text SentinelBook"
         data-text="ctaText"
         data-style="padding:0 5px 0px;"
         style="top: 17px;
@@ -102,9 +92,7 @@
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
     </div>
     <div id="loadFont" style="width:0;height:0;overflow:hidden;">
-      <div class="InterLight">InterLight</div>
-      <div class="InterSemiBold">InterSemiBold</div>
-      <!-- <div class="ScotchDisplayFat">ScotchDisplayFat</div> -->
+      <div class="SentinelBook">SentinelBook</div>
     </div>
     <script type="text/javascript">
       var layout = 'standard';
@@ -139,7 +127,7 @@
             // ref: 'ref.png'
             saleImage: 'images/320x50_Vail_Resort_SaleImage.png',
             styleProperties: "na", //{'#cta': {y:10},'#logoImage': {y:10}}
-            ctaBtnColor: '#006691^#002d40',
+            ctaBtnColor: '#e18431^#51879f',
           },
           beforeLoad: function(data){
             data.map(function(content){
